refactor(web): change elevation colors to have less colors
* make it less confusing and more consistent

--- a/web/src/pages/root/_components/Project/Project.module.scss
+++ b/web/src/pages/root/_components/Project/Project.module.scss
@@ -3,7 +3,7 @@
 
 .project {
   border-radius: 0.3rem;
-  background-color: var(--elevation-2);
+  background-color: var(--elevation-1);
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
@@ -15,7 +15,7 @@
   @include project-colors(border-left-color);
 
   &:hover {
-    background-color: var(--elevation-5);
+    background-color: var(--elevation-1-hover);
   }
 
   & > * {
@@ -59,7 +59,7 @@
 
 .loading {
   border-radius: 0.3rem;
-  background-color: var(--elevation-2);
+  background-color: var(--elevation-1);
   border: var(--border-semi-trans);
   padding: 0.5rem 0.5rem 0.5rem 1rem;
   gap: 0.5rem;
