--- a/web/src/pages/root/_components/Task/Task.module.scss
+++ b/web/src/pages/root/_components/Task/Task.module.scss
@@ -12,7 +12,7 @@
   @include project-colors(border-left-color);
 
   &:hover {
-    background-color: var(--elevation-5);
+    background-color: var(--elevation-1-hover);
   }
 }
 
@@ -49,7 +49,7 @@
 }
 
 .loading {
-  background-color: var(--elevation-2);
+  background-color: var(--elevation-1);
   border: var(--border-semi-trans);
   border-radius: 0.3rem;
   padding-left: 1.1rem;
