--- a/web/src/pages/root/_layout/RootLayout.module.scss
+++ b/web/src/pages/root/_layout/RootLayout.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   gap: 1.2rem;
   border-radius: 0.3rem;
-  background-color: var(--elevation-2);
+  background-color: var(--elevation-1);
   border: var(--border-semi-trans);
   align-items: center;
   padding: 1rem 1.2rem;
@@ -13,7 +13,7 @@
   width: 100%;
 
   &:hover {
-    background-color: var(--elevation-5);
+    background-color: var(--elevation-1-hover);
   }
 
   h1,
