feat(web): TextInput display property
* change from inline-flex to flex

--- a/web/src/components/TextInput/TextInput.module.scss
+++ b/web/src/components/TextInput/TextInput.module.scss
@@ -5,7 +5,7 @@ $error: var(--color-red-500);
 $placeholderError: var(--color-red-900);
 
 .outer {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
 }
 
@@ -27,7 +27,7 @@ $placeholderError: var(--color-red-900);
 }
 
 .textInput {
-  display: inline-flex;
+  display: flex;
   position: relative;
   align-items: center;
   gap: 0.5rem;
@@ -52,7 +52,6 @@ $placeholderError: var(--color-red-900);
   inset: calc(var(--font-size-xs) / -2) 0 0 0;
   margin: 0;
   padding: 0 0.4rem;
-  box-sizing: border-box;
   width: 100%;
   border-width: 1px 1px 1px 0.3rem;
   border-color: rgba(255, 255, 255, 0.25);
