feat(web): add size to Buttons
* change Button.Link in Home and ProjectDetail to size sm

--- a/web/src/components/Button/Button.module.scss
+++ b/web/src/components/Button/Button.module.scss
@@ -34,19 +34,40 @@
   --alt-loading-color: var(--elevation-2);
 }
 
+.sm {
+  --padding: 0.35rem 0.5rem;
+  --gap: 0.4rem;
+  --icon-size: var(--font-size-sm);
+  --font-size: var(--font-size-xs);
+}
+
+.md {
+  --padding: 0.4rem 0.6rem;
+  --gap: 0.5rem;
+  --icon-size: var(--font-size-md);
+  --font-size: var(--font-size-sm);
+}
+
+.lg {
+  --padding: 0.5rem 0.75rem;
+  --gap: 0.6rem;
+  --icon-size: var(--font-size-lg);
+  --font-size: var(--font-size-md);
+}
+
 .button {
   position: relative;
-  transition: 0.2s;
-  padding: 0.5rem 0.75rem;
+  transition: background-color 0.2s;
+  padding: var(--padding);
   border: var(--border);
   border-radius: 0.3rem;
   display: flex;
   flex-direction: row;
   align-items: stretch;
   justify-content: center;
-  gap: 0.5rem;
+  gap: var(--gap);
   font-family: inherit;
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size);
   text-decoration: none;
   cursor: pointer;
   overflow: hidden;
@@ -100,4 +121,6 @@
 .icon {
   position: relative;
   color: var(--default-color);
+  width: var(--icon-size);
+  height: var(--icon-size);
 }
