feat(web): create new component: Setting.Form
* change title prop to settingTitle to avoid collision with form prop

--- a/web/src/pages/settings/_components/Setting/Setting.module.scss
+++ b/web/src/pages/settings/_components/Setting/Setting.module.scss
@@ -12,3 +12,13 @@
   border-bottom: var(--border-semi-trans);
   margin-bottom: 1rem;
 }
+
+.form {
+  & > div {
+    width: 25rem;
+  }
+
+  & > * + * {
+    margin-top: 1rem;
+  }
+}
