--- a/web/src/components/Modal/Modal.module.scss
+++ b/web/src/components/Modal/Modal.module.scss
@@ -8,9 +8,34 @@
 }
 
 .content {
-  background-color: var(--elevation-1);
-  border-radius: 0.3rem;
-  border: var(--border-semi-trans);
-  padding: 2rem;
   max-width: 40%;
+
+  & > *:first-child {
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
+  }
+
+  & > *:last-child {
+    border-bottom-left-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
+  }
+}
+
+.title {
+  padding-bottom: 0.5rem;
+  border-bottom: var(--border-semi-trans);
+  margin-bottom: 1rem;
+}
+
+.main {
+  padding: 1rem 1.5rem;
+  background-color: var(--elevation-1);
+  border: var(--border-semi-trans);
+}
+
+.footer {
+  padding: 1rem 1.5rem;
+  background-color: var(--elevation-1-hover);
+  border: var(--border-semi-trans);
+  border-top: none;
 }
