fix(web): Confirmation not having a background
* add flex to Modal.Footer

--- a/web/src/components/Modal/Modal.module.scss
+++ b/web/src/components/Modal/Modal.module.scss
@@ -42,4 +42,7 @@
   background-color: var(--elevation-1-hover);
   border: var(--border-semi-trans);
   border-top: none;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
